<resources>
    <string name="app_name">Avalanche</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="thanks_for_your_order">Thanks for your order</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="failed_transaction_string">Oops, something went wrong</string>
    <string name="slogan">All your fashion needs</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="create_account">Create Account</string>
    <string name="verify_code">Verify Code</string>
    <string name="please_send_the_code_msg">Please send the code sent to: 081*******49</string>
    <string name="verification">Verification</string>
    <string name="code">Code</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="select_means_to_reset_your_password">Select means to reset your password</string>
    <string name="via_email">via email</string>
    <string name="reset_password_email">dika@gmail.com</string>
    <string name="next">Next</string>
    <string name="reset_password_number">+2348000001112</string>
    <string name="success_update_msg">Your password has been updated</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="identity_verified_msg">Your identity has been verified. Please set your new password</string>
    <string name="new_password">New Password</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="select_product_image">Select Image</string>


    <string-array name="cart_quantity_string_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5(Max)</item>
    </string-array>
</resources>