<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.ForgotPasswordSelectionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/arrow_back"
            app:tint="@color/black" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:text="Make \nSelection"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:text="@string/select_means_to_reset_your_password"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="50dp"
            android:background="@color/light_grey"
            android:padding="10dp">

            <ImageView
                android:id="@+id/mobile_icon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_baseline_phone_android" />

            <TextView
                android:id="@+id/mobile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_toRightOf="@id/mobile_icon"
                android:text="via sms:"
                android:textSize="22sp" />


            <TextView
                android:id="@+id/mobile_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mobile_title"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/mobile_icon"
                android:text="@string/reset_password_number"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <Button
                android:id="@+id/reset_pwd_via_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="50dp"
            android:background="@color/light_grey"
            android:padding="10dp">

            <ImageView
                android:id="@+id/email_icon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_baseline_email" />

            <TextView
                android:id="@+id/email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_toRightOf="@id/email_icon"
                android:text="@string/via_email"
                android:textSize="22sp" />


            <TextView
                android:id="@+id/email_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_title"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/email_icon"
                android:text="@string/reset_password_email"
                android:textColor="@color/black"
                android:textSize="22sp" />
            <Button
                android:id="@+id/reset_pwd_via_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0"/>
        </RelativeLayout>


    </LinearLayout>


</ScrollView>